--- a/JiraAPI.ipynb
+++ b/JiraAPI.ipynb
@@ -27,7 +27,7 @@
     "summary = \"Test Epic Summary\"\n",
     "description = \"Load a bunch of parts for testing\"\n",
     "url = 'https://aspenlabs.atlassian.net/rest/api/2/'\n",
-    "auth = ('kutenai', 'coR3ash9cig9Da')"
+    "auth = ('kutenai', <need a password here>)"
    ]
   },
   {
